[gd_scene load_steps=18 format=2]

[ext_resource path="res://scenes/enemies/enemy_flying.gd" type="Script" id=1]
[ext_resource path="res://art/enemies/wasp_prep.png" type="Texture" id=2]
[ext_resource path="res://art/enemies/wasp_idle.png" type="Texture" id=6]

[sub_resource type="Animation" id=44]
resource_name = "attack"
length = 0.0833335
loop = true
step = 0.0166667
tracks/0/type = "value"
tracks/0/path = NodePath("zeroPoint/AnimatedSprite3D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("zeroPoint/AnimatedSprite3D:animation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ "attack" ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("zeroPoint/AnimatedSprite3D:offset")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 15 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("zeroPoint/hitbox/hitboxCollision:disabled")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("zeroPoint/hitbox/hitboxCollision:shape:extents")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ Vector3( 7, 7, 7 ) ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("zeroPoint/hitbox/hitboxCollision:translation")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ Vector3( 0, 1, 0 ) ]
}

[sub_resource type="Animation" id=25]
resource_name = "attack_prep"
step = 0.0166667
tracks/0/type = "value"
tracks/0/path = NodePath("zeroPoint/AnimatedSprite3D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("zeroPoint/AnimatedSprite3D:animation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ "attack" ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("zeroPoint/AnimatedSprite3D:offset")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 15 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("zeroPoint/hitbox/hitboxCollision:disabled")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("zeroPoint/hitbox/hitboxCollision:shape:extents")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ Vector3( 1, 1, 1 ) ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("zeroPoint/hitbox/hitboxCollision:translation")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ Vector3( 0, 4, 0 ) ]
}

[sub_resource type="Animation" id=33]
resource_name = "dead"
length = 2.0
step = 0.0166667
tracks/0/type = "value"
tracks/0/path = NodePath("zeroPoint/AnimatedSprite3D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("zeroPoint/AnimatedSprite3D:animation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ "hurt_floor" ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("zeroPoint/AnimatedSprite3D:offset")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.5, 0.750001, 1, 1.25, 1.5, 1.75 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ Vector2( 0, 15 ), Vector2( 0, -50000 ), Vector2( 0, 15 ), Vector2( 0, -50000 ), Vector2( 0, 15 ), Vector2( 0, -50000 ), Vector2( 0, 15 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("zeroPoint/hitbox/hitboxCollision:disabled")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("zeroPoint/hitbox/hitboxCollision:shape:extents")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector3( 1, 1, 1 ) ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("zeroPoint/hitbox/hitboxCollision:translation")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector3( 0, 4, 0 ) ]
}

[sub_resource type="Animation" id=26]
resource_name = "hurt"
length = 0.416667
step = 0.0166667
tracks/0/type = "value"
tracks/0/path = NodePath("zeroPoint/AnimatedSprite3D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("zeroPoint/AnimatedSprite3D:animation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ "hurt" ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("zeroPoint/AnimatedSprite3D:offset")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.0333333, 0.0833333, 0.133333, 0.15 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 15 ), Vector2( -9, 15 ), Vector2( 6, 15 ), Vector2( -3, 15 ), Vector2( 0, 15 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("zeroPoint/hitbox/hitboxCollision:disabled")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("zeroPoint/hitbox/hitboxCollision:shape:extents")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector3( 1, 1, 1 ) ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("zeroPoint/hitbox/hitboxCollision:translation")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector3( 0, 4, 0 ) ]
}

[sub_resource type="Animation" id=27]
resource_name = "hurt_air"
length = 0.166667
loop = true
step = 0.0166667
tracks/0/type = "value"
tracks/0/path = NodePath("zeroPoint/AnimatedSprite3D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("zeroPoint/AnimatedSprite3D:animation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ "hurt_air" ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("zeroPoint/AnimatedSprite3D:offset")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 15 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("zeroPoint/hitbox/hitboxCollision:disabled")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("zeroPoint/hitbox/hitboxCollision:shape:extents")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector3( 1, 1, 1 ) ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("zeroPoint/hitbox/hitboxCollision:translation")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector3( 0, 4, 0 ) ]
}

[sub_resource type="Animation" id=28]
resource_name = "hurt_floor"
step = 0.0166667
tracks/0/type = "value"
tracks/0/path = NodePath("zeroPoint/AnimatedSprite3D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("zeroPoint/AnimatedSprite3D:animation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ "hurt_floor" ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("zeroPoint/AnimatedSprite3D:offset")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 15 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("zeroPoint/hitbox/hitboxCollision:disabled")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("zeroPoint/hitbox/hitboxCollision:shape:extents")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector3( 1, 1, 1 ) ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("zeroPoint/hitbox/hitboxCollision:translation")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector3( 0, 4, 0 ) ]
}

[sub_resource type="Animation" id=30]
resource_name = "idle"
length = 0.166667
loop = true
step = 0.0166667
tracks/0/type = "value"
tracks/0/path = NodePath("zeroPoint/AnimatedSprite3D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("zeroPoint/AnimatedSprite3D:animation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ "fly" ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("zeroPoint/AnimatedSprite3D:offset")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 15 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("zeroPoint/hitbox/hitboxCollision:disabled")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("zeroPoint/hitbox/hitboxCollision:shape:extents")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector3( 1, 1, 1 ) ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("zeroPoint/hitbox/hitboxCollision:translation")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector3( 0, 4, 0 ) ]
}

[sub_resource type="SpriteFrames" id=38]
animations = [ {
"frames": [ ExtResource( 6 ) ],
"loop": false,
"name": "hurt_floor",
"speed": 5.0
}, {
"frames": [ ExtResource( 6 ) ],
"loop": false,
"name": "hurt",
"speed": 5.0
}, {
"frames": [ ExtResource( 6 ) ],
"loop": false,
"name": "hurt_air",
"speed": 5.0
}, {
"frames": [ ExtResource( 2 ) ],
"loop": false,
"name": "attack_prep",
"speed": 5.0
}, {
"frames": [ ExtResource( 6 ) ],
"loop": false,
"name": "fly",
"speed": 5.0
}, {
"frames": [ ExtResource( 2 ) ],
"loop": false,
"name": "attack",
"speed": 5.0
} ]

[sub_resource type="BoxShape" id=15]
resource_local_to_scene = true

[sub_resource type="CylinderShape" id=42]
radius = 1.25
height = 3.0

[sub_resource type="CylinderMesh" id=41]
height = 0.1

[sub_resource type="CapsuleShape" id=40]
height = 0.25

[sub_resource type="CylinderShape" id=37]
resource_local_to_scene = true
radius = 14.0
height = 24.0

[sub_resource type="CylinderShape" id=43]
resource_local_to_scene = true
radius = 1.5

[node name="Enemy" type="KinematicBody"]
transform = Transform( -4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, 0, 0, 0 )
collision_layer = 16
collision_mask = 2
script = ExtResource( 1 )

[node name="Label" type="Label" parent="."]
margin_left = 1184.0
margin_right = 1280.0
margin_bottom = 14.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "idle"
anims/attack = SubResource( 44 )
anims/attack_prep = SubResource( 25 )
anims/dead = SubResource( 33 )
anims/hurt = SubResource( 26 )
anims/hurt_air = SubResource( 27 )
anims/hurt_floor = SubResource( 28 )
anims/idle = SubResource( 30 )

[node name="zeroPoint" type="Spatial" parent="."]

[node name="AnimatedSprite3D" type="AnimatedSprite3D" parent="zeroPoint"]
transform = Transform( -4.37114e-08, 0.258819, 0.965926, 0, 0.965926, -0.258819, -1, -1.13133e-08, -4.2222e-08, 0, 0, 0 )
offset = Vector2( 0, 15 )
pixel_size = 0.07
frames = SubResource( 38 )
animation = "hurt_floor"

[node name="hitbox" type="Area" parent="zeroPoint"]
collision_layer = 32
collision_mask = 0
monitoring = false

[node name="hitboxCollision" type="CollisionShape" parent="zeroPoint/hitbox"]
transform = Transform( 0.1, 0, 0, 0, 0.1, 0, 0, 0, 0.1, 0, 4, 0 )
shape = SubResource( 15 )
disabled = true

[node name="hurtbox" type="Area" parent="zeroPoint"]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 1.5, 0 )
collision_layer = 0
collision_mask = 12
monitorable = false

[node name="CollisionShape" type="CollisionShape" parent="zeroPoint/hurtbox"]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 4.37114e-08, 0.5 )
shape = SubResource( 42 )

[node name="shadowMaker" type="MeshInstance" parent="zeroPoint"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.5, 0 )
cast_shadow = 3
mesh = SubResource( 41 )
skeleton = NodePath("../..")
material/0 = null

[node name="CollisionShapeGround" type="CollisionShape" parent="."]
transform = Transform( 0.965926, -1.48943e-09, -0.258819, -0.258819, -1.13133e-08, -0.965926, -1.48943e-09, 1, -1.13133e-08, 0.22, 1.2, 0 )
shape = SubResource( 40 )

[node name="aggro" type="Area" parent="."]
collision_layer = 0
monitorable = false

[node name="CollisionShape" type="CollisionShape" parent="aggro"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 3, 0 )
shape = SubResource( 37 )

[node name="enemyPushback" type="Area" parent="."]
collision_layer = 16
collision_mask = 16

[node name="CollisionShape2" type="CollisionShape" parent="enemyPushback"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0 )
shape = SubResource( 43 )

[node name="tooHighRay" type="RayCast" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2, 0 )
enabled = true
exclude_parent = false
cast_to = Vector3( 0, -500, 0 )
collision_mask = 130
debug_shape_thickness = 3.0

[node name="floatRay" type="RayCast" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0 )
enabled = true
exclude_parent = false
cast_to = Vector3( 0, -5, 0 )
collision_mask = 130
debug_shape_thickness = 3.0

[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
[connection signal="area_entered" from="zeroPoint/hurtbox" to="." method="_on_hurtbox_area_entered"]
[connection signal="area_exited" from="zeroPoint/hurtbox" to="." method="_on_hurtbox_area_exited"]
[connection signal="area_entered" from="aggro" to="." method="_on_aggro_area_entered"]
[connection signal="area_exited" from="aggro" to="." method="_on_aggro_area_exited"]
